update: add notification in server side

--- a/front_end.html
+++ b/front_end.html
@@ -89,7 +89,7 @@
         <h1>Chat</h1>
 
         <label><b>Message</b></label>
-        <textarea placeholder="Type message.." name="msg" required></textarea>
+        <textarea placeholder="Type message.." class="msg" required></textarea>
 
         <button type="button" class="btn" onclick="sendMessage()">Send</button>
         <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
